src/util/db/testing/snapshots/roadster__util__db__testing__sea_orm__tests__create_database_statement.snap
---
source: src/util/db/testing/sea_orm.rs
expression: statement
---
Statement {
    sql: "CREATE DATABASE \"test\"",
    values: None,
    db_backend: Postgres,
}
